--- a/frontend-webapp/src/app/shared/not-found/not-found.component.html
+++ b/frontend-webapp/src/app/shared/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 <div class="container my-5 text-center">
   <h1 class="display-1">404</h1>
-  <p class="lead">หน้าที่คุณร้องขอไม่มีอยู่จริง</p>
+  <p class="lead">ไม่พบหน้าที่คุณกำลังร้องขอ</p>
   <a class="btn btn-outline-primary mt-3" routerLink="/">กลับหน้าแรก</a>
 </div>
