--- a/frontend-webapp/src/app/core/nav-bar/nav-bar-search-box.component.html
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar-search-box.component.html
@@ -1,3 +1,3 @@
 <form [formGroup]="searchForm" class="d-inline-flex">
-  <input type="text" class="form-control query-input" formControlName="query" placeholder="ชื่อตลาดหรือสถานที่">
+  <input type="text" class="form-control" formControlName="query" placeholder="ชื่อตลาดหรือสถานที่">
 </form>
