--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.scss
@@ -35,7 +35,7 @@
       right: 0;
       top: 0;
       bottom: 0;
-      background: rgba(255, 255, 255, 1);
+      background: $white;
       justify-content: center;
       align-items: center;
       &.hidden {
