Fix white space issue slightly

--- a/frontend-webapp/src/app/feed/feed.component.scss
+++ b/frontend-webapp/src/app/feed/feed.component.scss
@@ -105,6 +105,7 @@
 .link-with-icon {
   display: flex;
   align-items: center;
+  white-space: nowrap;
   > .link-text {
     margin-right: 0.3rem;
   }
