--- a/frontend-webapp/src/app/vendor-dashboard/vendor-dashboard.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/vendor-dashboard.component.html
@@ -1,6 +1,6 @@
 <div *appSubNavBar class="vendor-bar d-flex">
   <a class="vendor-item pt-3 py-2 px-1 mr-4">จัดการตลาด</a>
-  <a class="vendor-item pt-3 py-2 px-1 mr-4">ข้อมูลการเงิน</a>
+  <a routerLink="payment" routerLinkActive="active" class="vendor-item pt-3 py-2 px-1 mr-4">ข้อมูลการเงิน</a>
   <a routerLink="profile" routerLinkActive="active" class="vendor-item pt-3 py-2 px-1 mr-4">ข้อมูลส่วนตัว</a>
 </div>
 
