Add header section

--- a/frontend-webapp/src/app/payment/payment.component.html
+++ b/frontend-webapp/src/app/payment/payment.component.html
@@ -3,6 +3,14 @@
   <span *appBreadcrumbItem>ชำระเงินเพื่อยืนยันการเชาบูธ</span>
 </app-breadcrumb>
 
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-10">
+      header
+    </div>
+  </div>
+</div>
+
 <div class="container my-5">
   <section class="main-content row justify-content-center align-items-start mb-5">
     <div class="col-12 col-md-10 col-lg-6">
