Add mock text to info box

--- a/frontend-webapp/src/app/payment/payment.component.html
+++ b/frontend-webapp/src/app/payment/payment.component.html
@@ -1,6 +1,6 @@
 <app-breadcrumb>
   <a *appBreadcrumbItem routerLink="/">ชื่อตลาด</a>
-  <span *appBreadcrumbItem>ชำระเงินเพื่อยืนยันการเชาบูธ</span>
+  <span *appBreadcrumbItem>ชำระเงินเพื่อยืนยันการเช่าบูธ</span>
 </app-breadcrumb>
 
 <div class="container">
@@ -18,7 +18,30 @@
     </div>
 
     <div class="col-12 col-md-10 col-lg-4 pl-lg-5 side-content">
-      right
+      <div class="info-container">
+        <div class="data-line">
+          <span class="">หมายเลขบูธ</span>
+          <span class="">A22</span>
+        </div>
+        <div class="data-line">
+          <span class="">ราคาบูธ</span>
+          <span class="">1,200฿</span>
+        </div>
+        <hr>
+        <div class="data-line">
+          <span class="">แบ่งชำระเงิน 30%</span>
+          <span class="">360฿</span>
+        </div>
+        <div class="data-line">
+          <span class="">ค้างชำระ</span>
+          <span class="">840฿</span>
+        </div>
+        <hr>
+        <div class="data-line">
+          <span class="">จำนวนเงินที่ต้องชำระ</span>
+          <span class="">360฿</span>
+        </div>
+      </div>
     </div>
   </section>
 </div>
