Add style to info box's topic

--- a/frontend-webapp/src/app/payment/payment.component.html
+++ b/frontend-webapp/src/app/payment/payment.component.html
@@ -20,26 +20,26 @@
     <div class="col-12 col-md-10 col-lg-4 pl-lg-5 side-content">
       <div class="info-container">
         <div class="data-line">
-          <span class="">หมายเลขบูธ</span>
-          <span class="">A22</span>
+          <span class="topic">หมายเลขบูธ</span>
+          <span>A22</span>
         </div>
         <div class="data-line">
-          <span class="">ราคาบูธ</span>
-          <span class="">1,200฿</span>
-        </div>
-        <hr>
-        <div class="data-line">
-          <span class="">แบ่งชำระเงิน 30%</span>
-          <span class="">360฿</span>
-        </div>
-        <div class="data-line">
-          <span class="">ค้างชำระ</span>
-          <span class="">840฿</span>
+          <span class="topic">ราคาบูธ</span>
+          <span>1,200฿</span>
         </div>
         <hr>
         <div class="data-line">
-          <span class="">จำนวนเงินที่ต้องชำระ</span>
-          <span class="">360฿</span>
+          <span>แบ่งชำระเงิน 30%</span>
+          <span>360฿</span>
+        </div>
+        <div class="data-line">
+          <span>ค้างชำระ</span>
+          <span>840฿</span>
+        </div>
+        <hr>
+        <div class="data-line">
+          <span class="topic">จำนวนเงินที่ต้องชำระ</span>
+          <span>360฿</span>
         </div>
       </div>
     </div>
