--- a/frontend-webapp/src/app/vendor-dashboard/payment/vendor-payment.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/payment/vendor-payment.component.html
@@ -1,17 +1,17 @@
 <div class="row">
   <div class="offset-md-1 col-md-10">
-    <h4>ข้อมูลการเงิน</h4>
+    <h4>ข้อมูลบัตรเครดิต</h4>
 
     <div *ngFor="let card of creditCards" class="payment-list">
       <div class="mb-2">
         <div class="d-flex flex-wrap align-items-center mt-3">
-          <div class="p-3">
+          <div class="p-2 p-sm-3">
             <div class="thumb-img">
               <img class="img-fluid" [src]="'/assets/images/payment/' + card.type + '.png'" />
             </div>
           </div>
           <div class="p-2">
-            <div class="font-weight-bold">{{ card.cardNumber }}</div>
+            <div class="font-weight-bold">{{ card.cardNumber | creditCard:'hide' }}</div>
             <div>{{ card.cardHolderName }}</div>
             <div class="card-type">{{ card.type == 'master' ? 'Master Card' : 'Visa Card' }}</div>
           </div>
@@ -21,5 +21,64 @@
         </div>
       </div>
     </div>
+
+    <div *ngIf="creditCards && creditCards.length === 0">
+      ไม่มีข้อมูลบัตรเครดิตปรากฏอยู่
+    </div>
+
+    <div *ngIf="isShowAddCreditCard" class="mt-3">
+      <form [formGroup]="addCreditCardForm" (submit)="addCreditCard()">
+        <div class="row">
+          <div class="col-12">
+            <app-input-group label="รหัสบัตรเครดิต">
+              <input appInput type="text" class="form-control" formControlName="cardNumber" placeholder="1234123412341234">
+              <app-input-error *ngIf="addCreditCardForm.controls['cardNumber'].hasError('required')">
+                กรุณากรอกบัตรเครดิต
+              </app-input-error>
+            </app-input-group>
+          </div>
+          <div class="col-12">
+            <app-input-group label="ผู้ถือบัตร">
+              <input appInput type="text" class="form-control" formControlName="cardHolderName" placeholder="ผู้ถือบัตร">
+              <app-input-error *ngIf="addCreditCardForm.controls['cardHolderName'].hasError('required')">
+                กรุณากรอกผู้ถือบัตร
+              </app-input-error>
+            </app-input-group>
+          </div>
+          <div class="col-sm-6">
+            <app-input-group label="ประเภทบัตรเครดิต">
+              <select appInput formControlName="type" class="form-control">
+                <option selected>เลือกประเภทบัตร</option>
+                <option value="visa">Visa Card</option>
+                <option value="master">Master Card</option>
+              </select>
+              <app-input-error *ngIf="addCreditCardForm.controls['type'].hasError('required')">
+                กรุณาเลือกบัตรเครดิต
+              </app-input-error>
+            </app-input-group>
+          </div>
+          <div class="col-sm-6">
+            <app-input-group label="รหัสยืนยัน (CSV)">
+              <input appInput type="text" class="form-control" formControlName="verificationNumber" placeholder="234">
+              <app-input-error *ngIf="addCreditCardForm.controls['verificationNumber'].hasError('required')">
+                กรุณากรอกรหัสยืนยัน
+              </app-input-error>
+            </app-input-group>
+          </div>
+          <div class="col-12">
+            <app-input-group label="วันหมดอายุบัตร">
+              <input appInput type="text" class="form-control" formControlName="expiryDate" placeholder="2017-11-26">
+              <app-input-error *ngIf="addCreditCardForm.controls['expiryDate'].hasError('required')">
+                กรุณากรอกวันหมดอายุบัตร
+              </app-input-error>
+            </app-input-group>
+          </div>
+          <div class="col-12">
+            <button type="submit" class="btn btn-primary mt-3" [disabled]="addCreditCardForm.disabled">เพิ่มบัตรเครดิต</button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <button *ngIf="!isShowAddCreditCard" (click)="showAddCreditCard()" class="btn btn-primary mt-3">เพิ่มบัตรเครดิต</button>
   </div>
 </div>
