Add topic style to left content

--- a/frontend-webapp/src/app/payment/payment.component.html
+++ b/frontend-webapp/src/app/payment/payment.component.html
@@ -6,15 +6,17 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-md-10">
-      header
+      <!-- header -->
     </div>
   </div>
 </div>
 
 <div class="container my-5">
   <section class="main-content row justify-content-center align-items-start mb-5">
-    <div class="col-12 col-md-10 col-lg-6">
-      left
+    <div class="col-12 col-md-10 col-lg-6 left-content">
+      <h2><span>1</span> เลือกรูปแบบการแบ่งชำระ</h2>
+      <hr>
+      <h2><span>2</span> เลือกวิธีการชำระเงิน</h2>
     </div>
 
     <div class="col-12 col-md-10 col-lg-4 pl-lg-5 side-content">
