--- a/frontend-webapp/src/app/payment/payment.component.scss
+++ b/frontend-webapp/src/app/payment/payment.component.scss
@@ -1,5 +1,33 @@
 @import '~styles/common';
 
+.left-content {
+  h2 {
+    color: $primary;
+    @include font-weight(bold);
+    font-size: 1.3rem;
+    margin-bottom: map-get($spacers, 4);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    span {
+      background: $primary;
+      border-radius: 30px;
+      color: $white;
+      width: 30px;
+      height: 30px;
+      font-size: 1.1rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-right: 10px;
+    }
+  }
+  hr {
+    margin-top: map-get($spacers, 5);
+    margin-bottom: map-get($spacers, 5);
+  }
+}
+
 .side-content {
   position: sticky;
   top: 5rem;
