--- a/frontend-webapp/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/frontend-webapp/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,6 @@
 <div *appSubNavBar class="admin-bar d-flex">
   <a routerLink="verify-receipt" routerLinkActive="active" class="admin-item pt-3 py-2 px-1 mr-4">ตรวจสอบใบเสร็จ</a>
-  <a routerLink="#" routerLinkActive="active" class="admin-item pt-3 py-2 px-1 mr-4">รายงานผู้เช่า</a>
+  <a routerLink="report" routerLinkActive="active" class="admin-item pt-3 py-2 px-1 mr-4">รายงานผู้เช่า</a>
 </div>
 
 <div class="container">
