Add mock text to header section

--- a/frontend-webapp/src/app/payment/payment.component.html
+++ b/frontend-webapp/src/app/payment/payment.component.html
@@ -3,10 +3,22 @@
   <span *appBreadcrumbItem>ชำระเงินเพื่อยืนยันการเช่าบูธ</span>
 </app-breadcrumb>
 
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-10">
-      <!-- header -->
+<div class="header-container">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-10">
+        <div class="header mt-5 mb-3">
+          <h1>อาร์ต บอกซ์ สวนหลวง</h1>
+          <p class="location">
+            <app-svg-icon key="location-pin" width="15"></app-svg-icon>
+            <span>เกษตร-นวมินทร์ นนทบุรี</span>
+          </p>
+          <p class="date">
+            <app-svg-icon key="date" width="18"></app-svg-icon>
+            <span>9 – 15 กุมภาพันธ์ 2018</span>
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
