--- a/frontend-webapp/src/app/admin-dashboard/admin-verify-receipt/admin-verify-receipt.component.html
+++ b/frontend-webapp/src/app/admin-dashboard/admin-verify-receipt/admin-verify-receipt.component.html
@@ -1,9 +1,8 @@
-
 <ng-container *ngIf="(receipts$ ) as receipts">
   <div *ngFor="let receipt of receipts" class="receipt-item">
     <div class="row border-bottom-0">
       <div class="col-4">
-        <img width="100%"  [src]="receipt.receipt_image">
+        <img width="100%" [src]="receipt.receipt_image">
       </div>
       <div class="col-8">
         <dl>
@@ -14,21 +13,17 @@
           <dt>Payment amount</dt>
           <dd>{{ receipt.amount }}</dd>
         </dl>
-        <button class="btn btn-outline-success " (click)="removeReceipt(receipt.id, 2)" >Accept</button>
-        <button class="btn btn-outline-danger"  (click)="removeReceipt(receipt.id, 3)">Reject</button>
+        <button class="btn btn-outline-success " (click)="removeReceipt(receipt.id, 'accept')">Accept</button>
+        <button class="btn btn-outline-danger" (click)="removeReceipt(receipt.id, 'reject')">Reject</button>
       </div>
-      <hr width="100%">
+      <hr>
     </div>
-    
   </div>
+
   <ng-container *ngIf="receipts$.length == 0">
-      <div class="my-5 text-center">
-        <h1 class="display-1">ไม่มีใบเสร็จรอการตรวจขณะนี้</h1>
-        <p class="lead">เชิญไปทำหน้าที่อื่นต่อได้</p>
-      </div>
-    </ng-container>
+    <div class="my-5 text-center">
+      <h1 class="display-1">ไม่มีใบเสร็จรอการตรวจขณะนี้</h1>
+      <p class="lead">เชิญไปทำหน้าที่อื่นต่อได้</p>
+    </div>
+  </ng-container>
 </ng-container>
-
-
-    
-
