Fix input group error animation

--- a/frontend-webapp/src/app/shared/input/input-group.component.html
+++ b/frontend-webapp/src/app/shared/input/input-group.component.html
@@ -1,5 +1,7 @@
 <div class="form-group">
   <label [for]="inputId">{{ label }}</label>
   <ng-content select="[appInput]"></ng-content>
-  <ng-content select="app-input-error" *ngIf="showErrors"></ng-content>
+  <div *ngIf="showErrors" @errorInOut>
+    <ng-content select="app-input-error"></ng-content>
+  </div>
 </div>
