Center image in market landing page cover

--- a/frontend-webapp/src/app/market/landing/market-landing.component.scss
+++ b/frontend-webapp/src/app/market/landing/market-landing.component.scss
@@ -36,6 +36,7 @@
 .cover-image-container {
   background: $light-gray;
   background-size: cover;
+  background-position: center;
   height: 25rem;
 }
 
