Fix frontend HTML mapping

--- a/frontend-webapp/src/app/admin-dashboard/report/report.component.html
+++ b/frontend-webapp/src/app/admin-dashboard/report/report.component.html
@@ -4,8 +4,8 @@
       <div class="card" class="col-8 offset-2 border">
         <div class="card-body">
           <h4 class="card-title">{{ report.market }}</h4>
+          <p class="card-text">ผู้เช่าที่ถูกรีพอร์ท: {{ report.reported_user }}</p>
           <h6 class="card-subtitle mb-2 text-muted">{{ report.report_content }}</h6>
-          <p class="card-text">{{ report.user }}</p>
         </div>
       </div>
       <hr>
