Complete import component

--- a/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
+++ b/frontend-webapp/src/app/vendor-dashboard/profile/vendor-profile.component.html
@@ -80,6 +80,8 @@
                 </app-input-error>
               </app-input-group>
 
+              <app-lessor-form></app-lessor-form>
+
               <button class="mt-5 btn btn-primary" class="btn btn-outline-primary mr-2" (click)="setEditProfile(false)">ยกเลิก</button>
               <button type="submit" class="btn btn-primary" [disabled]="vendorProfileForm.disabled" class="btn btn-primary">
                 บันทึกข้อมูล
