Change wording for become a lessor

--- a/frontend-webapp/src/app/core/footer/footer.component.html
+++ b/frontend-webapp/src/app/core/footer/footer.component.html
@@ -7,7 +7,7 @@
           <li><a routerLink="/">ฟีดตลาด</a></li>
           <li><a routerLink="/">สมัครสมาชิก</a></li>
           <li><a routerLink="/">เข้าสู่ระบบ</a></li>
-          <li><a routerLink="/">ลงตลาดให้เช่า</a></li>
+          <li><a routerLink="/">เป็นผู้ให้เช่าตลาด</a></li>
         </ul>
       </div>
       <div class="col-12 col-md-3">
@@ -16,7 +16,7 @@
           <li><a routerLink="/">ฟีดตลาด</a></li>
           <li><a routerLink="/">สมัครสมาชิก</a></li>
           <li><a routerLink="/">เข้าสู่ระบบ</a></li>
-          <li><a routerLink="/">ลงตลาดให้เช่า</a></li>
+          <li><a routerLink="/">เป็นผู้ให้เช่าตลาด</a></li>
         </ul>
       </div>
       <div class="col-12 col-md-3">
