--- a/frontend-webapp/src/app/become-lessor/become-lessor.component.html
+++ b/frontend-webapp/src/app/become-lessor/become-lessor.component.html
@@ -1,7 +1,7 @@
 <div class="container mb-5">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-9 col-md-6 col-lg-5 col-xl-5">
-      <h1 class="display-4 mt-5">ลงตลาดให้เช่า</h1>
+      <h1 class="display-4 mt-5">เป็นผู้ให้เช่าตลาด</h1>
 
       <div *ngIf="(lessorStatus$ | async) === 'is_lessor'">
         คุณได้สมัครเป็นผู้ให้เช่าตลาดเรียบร้อยแล้ว
